committed video component to git for deployment

--- a/app/globals.css
+++ b/app/globals.css
@@ -77,6 +77,11 @@
   h1 {
     @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
   }
+
+  .heading1 {
+    @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+  }
+
   h2 {
     @apply scroll-m-20  text-3xl font-semibold tracking-tight first:mt-0;
   }
